welcome.lessons.welcome.bat.bool2.NearTen.scala.error
nearTen:3: error: ')' expected but 'return' found.
	return false
        ^